--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
           <h1 id="project_title">Poketap</h1>
           <h2 id="project_tagline">Jeux de marmotte au thème pokemon</h2>
-            <a href="https://github.com/Youmy001/PokeTap/media.html">Medias</a>
+            <a href="media.html">Medias</a>
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/Youmy001/PokeTap/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/Youmy001/PokeTap/tarball/master">Download this project as a tar.gz file</a>
