--- a/media.html
+++ b/media.html
@@ -20,12 +20,29 @@
 
           <h1 id="project_title">Poketap</h1>
           <h2 id="project_tagline">Jeux de marmotte au thème pokemon</h2>
-            <a href="media.html">Medias</a><a href="documentation/index.html">Documentation</a><a href="downloads.html">Telechargements</a>
+            <a href="media.html">Medias</a>&nbsp;&nbsp;<a href="documentation/index.html">Documentation</a>&nbsp;&nbsp;<a href="downloads.html">Telechargements</a>
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/Youmy001/PokeTap/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/Youmy001/PokeTap/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
+    </div>
+	 <div id="main_content_wrap" class="outer">
+		<section id="main_content" class="inner">
+			<h1> Capture d'&eacute;cran</h1>
+			<img href="image/accueil.png"/>
+			<img href="image/jeu.png"/>
+			</br>
+			</br>
+			</br>
+			<h1>Musique</h1>
+			<audio controls>
+			  <!--<source src="musique/poke_game.ogg" type="audio/ogg">-->
+			  <source src="musique/poke_menu.mp3" type="audio/mpeg">
+			  <!--<source src="musique/poke_game.ogg" type="audio/ogg">-->
+			  <source src="musique/poke_menu.mp3" type="audio/mpeg">
+			</audio>
+	    </section>
     </div>
 	
 	 <!-- FOOTER  -->
