--- a/media.html
+++ b/media.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/Youmy001/PokeTap">View on GitHub</a>
 
           <h1 id="project_title">Poketap</h1>
-          <h2 id="project_tagline">Jeux de marmotte au thème pokemon</h2>
+          <h2 id="project_tagline">Jeux de marmotte au th&egrave;me pokemon</h2>
             <a href="media.html">Medias</a>&nbsp;&nbsp;<a href="documentation/index.html">Documentation</a>&nbsp;&nbsp;<a href="downloads.html">Telechargements</a>
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/Youmy001/PokeTap/zipball/master">Download this project as a .zip file</a>
@@ -52,8 +52,6 @@
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-
-    
 
   </body>
 </html>
