--- a/media.html
+++ b/media.html
@@ -37,10 +37,12 @@
 			</br>
 			<h1>Musique</h1>
 			<audio controls>
-			  <!--<source src="musique/poke_game.ogg" type="audio/ogg">-->
 			  <source src="musique/poke_menu.mp3" type="audio/mpeg">
+			  <!--<source src="musique/poke_menu.ogg" type="audio/ogg">-->
+			</audio>
+			<audio controls>
 			  <!--<source src="musique/poke_game.ogg" type="audio/ogg">-->
-			  <source src="musique/poke_menu.mp3" type="audio/mpeg">
+			  <source src="musique/poke_game.mp3" type="audio/mpeg">
 			</audio>
 	    </section>
     </div>
