--- a/media.html
+++ b/media.html
@@ -30,8 +30,8 @@
 	 <div id="main_content_wrap" class="outer">
 		<section id="main_content" class="inner">
 			<h1> Capture d'&eacute;cran</h1>
-			<img href="image/accueil.png"/>
-			<img href="image/jeu.png"/>
+			<img href="images/accueil.png"/>
+			<img href="images/jeu.png"/>
 			</br>
 			</br>
 			</br>
