--- a/media.html
+++ b/media.html
@@ -30,10 +30,8 @@
 	 <div id="main_content_wrap" class="outer">
 		<section id="main_content" class="inner">
 			<h1> Capture d'&eacute;cran</h1>
-			<img href="images/accueil.png"/>
-			<img href="images/jeu.png"/>
-			</br>
-			</br>
+			<img src="images/accueil.png"></img>
+			<img src="images/jeu.png"></img>
 			</br>
 			<h1>Musique</h1>
 			<audio controls>
