--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -17,7 +17,7 @@
 <a id="forkme_banner" href="https://github.com/Youmy001/PokeTap">View on GitHub</a>
 <h1 id="project_title">Poketap</h1>
 <h2 id="project_tagline">Jeux de marmotte au thème pokemon</h2>
-<a href="media.html">Medias</a>&nbsp;&nbsp;<a href="documentation/index.html">Documentation</a>
+<a href="media.html">Medias</a>&nbsp;&nbsp;<a href="Documentation/index.html">Documentation</a>
 <section id="downloads">
 <a class="zip_download_link" href="https://github.com/Youmy001/PokeTap/zipball/master">Download this project as a .zip file</a>
 <a class="tar_download_link" href="https://github.com/Youmy001/PokeTap/tarball/master">Download this project as a tar.gz file</a>
