--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 	-sudo apt-get install libsdl-image1.2-dev
 	-sudo apt-get install libsdl-mixer1.2-dev
 	-sudo apt-get install libsdl-ttf2.0-dev
+- Créer le sous-répertoire ./saves dans le répertoire du jeu
 - Ouvrir le fichier jeu_marmotte.ecf avec eiffelstudio
 - Bon jeu !
 </code></pre>
