--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
 
 <h2>Installation</h2>
 
-<pre><code>- Lancer la commande « git clone https://github.com/Youmy001/PokeTap.git » dans un Gitbash
-  OU aller sur www.github.com/Youmy001/Poketap et appuyer sur ZIP et extraire le tout dans un dossier quelconque
+<pre><code>- - Sur Windows, lancer la commande « git clone https://github.com/Youmy001/PokeTap.git » dans un Gitbash
+  OU aller sur www.github.com/Youmy001/Poketap et appuyer sur ZIP et extraire le tout dans un dossier quelconque.
+  Sur Linux, dans un terminal, tapez la commande « git clone https://github.com/Youmy001/PokeTap.git » ou tapez
+  ces deux commandes: «wget https://github.com/Youmy001/PokeTap/tarball/master» et
+  «tar -zxvf Youmy001-PokeTap-837c183.tar.gz»
 - Sur Linux (basé sur Debian):
 	-sudo apt-get install libsdl1.2-dev
 	-sudo apt-get install libsdl-image1.2-dev
