--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <h2>Installation</h2>
 
-<pre><code>- - Sur Windows, lancer la commande « git clone https://github.com/Youmy001/PokeTap.git » dans un Gitbash
+<pre><code>- Sur Windows, lancer la commande « git clone https://github.com/Youmy001/PokeTap.git » dans un Gitbash
   OU aller sur www.github.com/Youmy001/Poketap et appuyer sur ZIP et extraire le tout dans un dossier quelconque.
   Sur Linux, dans un terminal, tapez la commande « git clone https://github.com/Youmy001/PokeTap.git » ou tapez
   ces deux commandes: «wget https://github.com/Youmy001/PokeTap/tarball/master» et
