--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
 <ul>
 <li>Jouez seul et essayez de vaincre votre meilleur score</li>
 <li>Jouez contre un ami via une connection TCP/IP</li>
-<li>Compatible Windows et Linux<br>
-</li>
-</ul><h2>Version</h2>
+<li>Compatible Windows et Linux</li>
+<li>Nécessite EiffelStudio 7.1 ou ultérieur</li>
+</ul>
+
+<h2>Version</h2>
 
 <p>0.1</p>
 
